# VLM-Guard

./: .gitignore  README.md  __init__.py  app.py  pyproject.toml  start_demo.sh  web_ui.py
apps/: video_analyzer.py  web_ui.py
core/: __init__.py  data_visualizer_receiver.py  database.py  rs485_controller.py  rs485_sensor_data_sender.py  video_streamer.py
data/: data.md  vlm_demo.db
models/: data_visualizer_receiver.py  database.py  rs485_controller.py  rs485_sensor_data_sender.py  video_streamer.py
services/: __init__.py  app_service.py  config.py
templates/: web_ui.html
tests/: __init__.py
utils/: __init__.py  logger.py
